--- a/index.html
+++ b/index.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Kosugi&family=Nova+Square&display=swap" rel="stylesheet">
+
+
+	<meta charset="UTF-8">
 	<title>AC6 Build Randomizer</title>
 	<style>
 		body {
 			max-width: 960px;
 			margin: 0 auto;
-			font-family: Courier New, Courier, Lucida Sans Typewriter, Lucida Typewriter, monospace;
+			font-family: 'Nova Square', cursive;
+
 		}
 		.part {
 			border: 1px solid #AAA;
 			margin: 1em;
 			padding: 1em;
+			font-family: 'Nova Square', cursive;
+
 		}
 		.part-category {
 			color: #454545;
 			font-size: 0.8em;
+			font-family: 'Nova Square', cursive;
+
 		}
 		.part-name {
 			margin-left: 2em;
 			font-size: 1.4em;
 			font-weight: bold;
 			margin-top: 0.5em;
+			font-family: 'Nova Square', cursive;
+
 		}
 		ol {
 			list-style: disc;
@@ -30,20 +43,29 @@
 			border: 1px solid #AAA;
 			background-color: #EEE;
 			padding: 2em;
+			font-family: 'Kosugi', sans-serif;
+
+			
 		}
 		.options h2 {
 			margin-top: 0;
+			font-family: 'Nova Square', cursive;
+
 		}
 		.build {
 			width: 100%;
 			display: grid;
 			grid-template-columns: 1fr 1fr;
+			font-family: 'Nova Square', cursive;
+
+
 		}
+		
 	</style>
 </head>
 <body>
 	<h1>Armored Core 6 Build Randomizer</h1>
-	<p>Build randomizer that ensures weight / EN load is correct. All parts are included, even hidden/loghunt/story/preorder ones.</p>
+	<p>EN負荷や重量を考慮してランダムな機体を生成します。 ※1.02時点でのすべてのパーツが含まれています。</p>
 	<div class="build">
 		<div class="part">
 			<div class="part-category">HEAD</div>
@@ -77,29 +99,48 @@
 			<div class="part-category">EXPANSION</div>
 			<div class="part-name" id="expansion-name">...</div>
 		</div>
+		<div class="part">
+			<div class="part-category">Left Arm Units</div>
+			<div class="part-name" id="left_arm_unit-name">...</div>
+		</div>
+		<div class="part">
+			<div class="part-category">Right Arm Units</div>
+			<div class="part-name" id="right_arm_unit-name">...</div>
+		</div>
+		<div class="part">
+			<div class="part-category">Left Back Units</div>
+			<div class="part-name" id="left_back_unit-name">...</div>
+		</div>
+		<div class="part">
+			<div class="part-category">Right Back Units</div>
+			<div class="part-name" id="right_back_unit-name">...</div>
+		</div>
 	</div>
 	<ul>
-		<li><b>Weight:</b> <span id="weight-info">...</span></li>
-		<li><b>Energy:</b> <span id="energy-info">...</span></li>
-		<li><b>Total COAM Price:</b> <span id="price-info">...</span></li>
+		<li><b>重量:</b> <span id="weight-info">...</span></li>
+		<li><b>EN容量:</b> <span id="energy-info">...</span></li>
+		<li><b>COAM:</b> <span id="price-info">...</span></li>
 	</ul>
-	<button id="reroll">Randomize</button>
+	<button id="reroll">Generate</button>
 	<br /><br />
 	<div class="options">
 		<h2>Options</h2>
 		<div>
-			<input type="checkbox" id="toggle-price-option" autocomplete="off" /> <label for="toggle-price-option">Maximum Total Price</label> <input type="range" id="price-option" value="1000000" step="50000" min="0" max="5000000" autocomplete="off" disabled /> <label for="price-option" id="price-value"></label><br />
-			<input type="checkbox" id="toggle-overweight" autocomplete="off" /> <label for="toggle-overweight">Generate Overweight Builds</label> 
+			<input type="checkbox" id="toggle-randomize_weapon" autocomplete="off" /> <label for="toggle-randomize_weapon">武装をランダムに選択</label><br />
+			<input type="checkbox" id="toggle-price-option" autocomplete="off" /> <label for="toggle-price-option">最大金額を指定</label> <input type="range" id="price-option" value="1000000" step="50000" min="0" max="5000000" autocomplete="off" disabled /> <label for="price-option" id="price-value"></label><br />
+			<input type="checkbox" id="toggle-overweight" autocomplete="off" /> <label for="toggle-overweight">積載容量を無視</label> 
 		</div>
 	</div>
 	<h2>Changelog</h2>
 	<ol>
-		<li>2023/09/06 -- allow overweight builds option</li>
-		<li>2023/09/05 -- no boosters for tank legs, price option, changed layout</li>
-		<li>2023/09/03 -- first version</li>
+		<li>2023/09/14 -- 日本語化/各武装をランダムで出力する機能を追加/レイアウトの調整</li>
+		<li>2023/09/06 -- 積載容量を無視するオプションを追加</li>
+		<li>2023/09/05 -- タンクの場合にブースターを装備しないように変更/COAMに関するオプションを追加/レイアウトの調整</li>
+		<li>2023/09/03 -- 初期リリース</li>
 	</ol>
 	<footer>
-		<a href="https://cohost.org/danbo" />danbo</a> did this. <a href="https://github.com/tinydanbo/ac6rando">GitHub source</a>
+		<a href="https://cohost.org/danbo" />danbo</a> did this. <a href="https://github.com/tinydanbo/ac6rando">GitHub source</a><br />
+		<a>※このページは上記のソースコードを改変して作成されました。</a>
 	</footer>
 	<script type="module" src="./index.js?ver02"></script>
 </body>
