--- a/index.html
+++ b/index.html
@@ -139,8 +139,11 @@
 		<li>2023/09/03 -- 初期リリース</li>
 	</ol>
 	<footer>
-		<a href="https://cohost.org/danbo" />danbo</a> did this. <a href="https://github.com/tinydanbo/ac6rando">GitHub source</a><br />
+		<a href="https://cohost.org/danbo" />danbo</a> did this. <a href="https://github.com/tinydanbo/ac6rando">Original GitHub source</a><br />
+		
 		<a>※このページは上記のソースコードを改変して作成されました。</a>
+		<a href="https://github.com/exveria1015/ac6rando">GitHub source</a><br />
+	
 	</footer>
 	<script type="module" src="./index.js?ver02"></script>
 </body>
