--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
 		<h2>Changelog</h2>
 		<div>
 		<ol>
+			<li>2023/09/15 -- 各パーツを再抽選できる機能の追加</li>
 			<li>2023/09/14 -- 日本語化/各武装をランダムで出力する機能を追加/レイアウトの調整</li>
 			<li>2023/09/06 -- 積載容量を無視するオプションを追加</li>
 			<li>2023/09/05 -- タンクの場合にブースターを装備しないように変更/COAMに関するオプションを追加/レイアウトの調整</li>
