--- a/index.html
+++ b/index.html
@@ -173,11 +173,13 @@
 	</div>
 	<ul>
 		<li><b>重量:</b> <span id="weight-info">...</span></li>
+		<li><b>腕部重量:</b> <span id="arms_weight-info">...</span></li>
 		<li><b>EN容量:</b> <span id="energy-info">...</span></li>
 		<li><b>COAM:</b> <span id="price-info">...</span></li>
 	</ul>
 	<ul>
 		<div id="en-error-message" style="color: red;"></div>
+		<div id="arms-error-message" style="color: red;"></div>
 		<div id="weight-error-message" style="color: red;"></div>
 		<div id="coam-error-message" style="color: red;"></div>
 	</ul>
